# bid-section-3-ai-parser

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
